# CKKS_practice

./: .gitignore  CKKS_class.cpp  CMakeLists.txt  README.md  SEAL_MM.cpp  SEAL_SGN.cpp  SEAL_SGN_TEMP.cpp  SEAL_VS.cpp  SEAL_VS.h  arithmetic_seal.cpp  compare.cpp  deprecated.txt  function_plain.cpp  function_seal.cpp  function_seal.h  measure_time.cpp  polymath.cpp  print.cpp
header/: CKKS_class.h  SEAL_MM.h  SEAL_VS.h  arithmetic_seal.h  compare.h  function_plain.h  function_seal.h  measure_time.h  polymath.h  print.h
